2006-12-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayModels/_PeopleModel.py: Fix birth date fallback

2006-12-09  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: external view support for media objects
	* src/Editors/_EditPlace.py: external view support for media objects
	* src/Editors/_EditMediaRef.py: external view support for media objects
	* src/Editors/_EditMedia.py: external view support for media objects
	* src/glade/gramps.glade: external view support for media objects

2006-12-09  Benny Malengier  <bm@cage.UGent.be>
	* src/PlaceUtils.py: better parsing of longitude/latitude

2006-12-08  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/glade/gramps.glade: Update Name Format Editor hint section.

2006-12-08  Benny Malengier  <bm@cage.UGent.be>
	* src/glade/gramps.glade: Tooltips for longitude and lattitude.

2006-12-06  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/EventEmbedList.py: fix typo

2006-12-07  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DataViews/_PlaceView.py (google): Use city, country of main
	location in google query.

2006-12-06  Alex Roitman  <shura@gramps-project.org>
	* src/Makefile.am (gdir_PYTHON): Ship new file.

2006-12-06  Benny Malengier  <bm@cage.UGent.be>
	* src/PlaceUtils.py: Add new file.
	* src/DataViews/_PlaceView.py (google): Use new module.

2006-12-05  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (GrampsBSDDB.load): Revert
	incorrect commit.

2006-12-05  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsDb/_GrampsBSDDB.py (load): typo (const.bsddbenv_dir)

2006-12-04  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: fix reorder spouse sensitivity
	* src/GrampsDb/_ReadGedcom.py: Handle notes with the way that
	Legacy can produce Place/Address combinations

2006-12-03  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: improve tooltips